openshift/sonarqube/route.yaml
# OpenShift Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
  namespace: sonarqube
  labels:
    app: sonarqube
  annotations:
    haproxy.router.openshift.io/timeout: "300s"
    haproxy.router.openshift.io/hsts_header: "max-age=31536000;includeSubDomains;preload"
spec:
  host: sonarqube.apps.ocp-one-gate-payment.skynux.fun
  to:
    kind: Service
    name: sonarqube
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
